--- a/.kitchen.ec2.yml
+++ b/.kitchen.ec2.yml
@@ -1,23 +1,7 @@
----
-suites:
-  - name: default
-    run_list:
-      - recipe[mapr_installation::default]
-      - recipe[mapr-spark::default]
-    attributes:
-      java:
-        version: 'java-1.8.0-openjdk-devel'
-        home: '/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.51-1.b16.el6_7.x86_64/'
-      mapr:
-        cldb: ['node-1']
-        zk: ['node-1']
-        rm: ['node-1']
-        hs: 'node-1'
-
 driver:
   name: ec2
   aws_ssh_key_id: <%= ENV['AWS_SSH_KEY'] %>
-  security_group_ids: <%= ENV['AWS_SECURITY_GROUPS'] %>
+  security_group_ids:  <%= ENV['AWS_SECURITY_GROUPS'] %>
   region: <%= ENV['AWS_REGION'] %>
   availability_zone: <%= ENV['AWS_AVAILABILITY_ZONE'] %>
   require_chef_omnibus: true
@@ -26,6 +10,10 @@ driver:
   associate_public_ip: false
   interface: private
   user_data: <%= ENV['USER_DATA_PATH'] %>
+  block_device_mappings:
+    - ebs_device_name: /dev/sdb
+      ebs_volume_size: 5
+      ebs_delete_on_termination: true
 
 provisioner:
   name: chef_zero
@@ -36,7 +24,20 @@ transport:
 
 platforms:
   - name: <%= ENV['AWS_PLATFORM_NAME'] %>
+    driver:
+      image_id: <%= ENV['AWS_AMI_ID'] %>
 
-driver:
-  image_id: <%= ENV['AWS_AMI_ID'] %>
+
+suites:
+  - name: default
+    run_list:
+      - role[mapr-node]
+    attributes:
+      mapr:
+        cldb: '*'
+        zk: '*'
+        rm: '*'
+        hs: '*'
+      ssh_keys:
+        mapr: ['mapr']
 
